--- a/trunk/trunk/Implementación/CBRServer/.classpath
+++ b/trunk/trunk/Implementación/CBRServer/.classpath
@@ -21,5 +21,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/junit.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hadoop-core-1.0.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hbase-0.94.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
