--- a/trunk/trunk/Implementación/CBRServer/.classpath
+++ b/trunk/trunk/Implementación/CBRServer/.classpath
@@ -13,15 +13,19 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/commons-collections-3.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/junit.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hadoop-core-1.0.4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hbase-0.94.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/zookeeper-3.4.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-configuration-1.9.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
