--- a/trunk/Implementación/CBRClient/.classpath
+++ b/trunk/Implementación/CBRClient/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="JTattoo-1.6.7.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CBRServer"/>
+	<classpathentry kind="lib" path="weka.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
