--- a/trunk/trunk/Implementación/CBRServer/.classpath
+++ b/trunk/trunk/Implementación/CBRServer/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hsqldb.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.7.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-configuration-1.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/protobuf-java-2.5.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
