--- a/trunk/Implementación/CBRServer/.classpath
+++ b/trunk/Implementación/CBRServer/.classpath
@@ -28,5 +28,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.7.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-configuration-1.9.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/protobuf-java-2.5.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-mapper-lgpl-1.9.12.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-lgpl-1.9.12.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
