--- a/trunk/trunk/Implementación/CBRClient/.classpath
+++ b/trunk/trunk/Implementación/CBRClient/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="JTattoo-1.6.7.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CBRServer"/>
 	<classpathentry kind="lib" path="weka.jar"/>
+	<classpathentry kind="lib" path="jcommon-1.0.17.jar"/>
+	<classpathentry kind="lib" path="jfreechart-1.0.14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
