--- a/trunk/Implementación/CBRServer/.classpath
+++ b/trunk/Implementación/CBRServer/.classpath
@@ -30,5 +30,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/protobuf-java-2.5.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-mapper-lgpl-1.9.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-lgpl-1.9.12.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
