--- a/trunk/trunk/Implementación/CBRServer/.classpath
+++ b/trunk/trunk/Implementación/CBRServer/.classpath
@@ -31,5 +31,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-mapper-lgpl-1.9.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-lgpl-1.9.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jcolibri2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/asm-4.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
